@@ -17,6 +17,9 @@
       $pdf->ttfont($fontfile, -unicodemap => 0) if you want to disable
       it for performance or file size reasons.
 
+    - Add a note to the stringify method's documentation saying that
+      it's a destructive operation.
+
     - The various filter types have their own classes in the
       PDF::API2::Basic::PDF::Filter namespace now, rather than having
       all of the packages in Filter.pm.
